스타일 효과 추가

--- a/index.html
+++ b/index.html
@@ -16,64 +16,332 @@
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=lfxl4YlY0lE')"
       >
-        <div class="cover-image">
-          <img src="cover/cover1.jpg" alt="용사" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover1.jpg" alt="용사" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image1"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover1.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text1">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image1)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    용사
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text1" />
+                  <use class="image-bg" xlink:href="#fade-text1" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>1st: 용사</p>
         <span>2024. 05. 17.</span>
       </div>
+
       <div
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=CtXv2_NBBOU')"
       >
-        <div class="cover-image">
-          <img src="cover/cover2.jpg" alt="괴수의 꽃노래" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover2.jpg" alt="괴수의 꽃노래" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image2"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover2.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text2">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image2)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    괴수의 꽃노래
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text2" />
+                  <use class="image-bg" xlink:href="#fade-text2" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>2nd: 괴수의 꽃노래</p>
         <span>2024. 07. 21.</span>
       </div>
+
       <div
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=T10fmu7T4eA')"
       >
-        <div class="cover-image">
-          <img src="cover/cover3.jpg" alt="지구를 줄게" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover3.jpg" alt="지구를 줄게" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image3"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover3.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text3">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image3)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    지구를 줄게
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text3" />
+                  <use class="image-bg" xlink:href="#fade-text3" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>3rd: 지구를 줄게</p>
         <span>2024. 08. 23.</span>
       </div>
+
       <div
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=Rr2GjXAgJ9E')"
       >
-        <div class="cover-image">
-          <img src="cover/cover4.jpg" alt="맑은 날" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover4.jpg" alt="맑은 날" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image4"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover4.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text4">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image4)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    맑은 날
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text4" />
+                  <use class="image-bg" xlink:href="#fade-text4" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>4th: 맑은 날</p>
         <span>2024. 09. 23.</span>
       </div>
+
       <div
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=7CQuc6Jf4UE')"
       >
-        <div class="cover-image">
-          <img src="cover/cover5.jpg" alt="GETCHA! (w. 아오쿠모 린)" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover5.jpg" alt="GETCHA! (w. 아오쿠모 린)" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image5"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover5.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text5">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image5)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    GETCHA
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text5" />
+                  <use class="image-bg" xlink:href="#fade-text5" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>5th: GETCHA! (w. 아오쿠모 린)</p>
         <span>2024. 10. 04.</span>
       </div>
+
       <div
         class="cover"
         onclick="openPopup('https://www.youtube.com/watch?v=dglNAGJiDT8')"
       >
-        <div class="cover-image">
-          <img src="cover/cover6.jpg" alt="톤데모 원더즈" />
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover6.jpg" alt="톤데모 원더즈" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image6"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover6.jpg"
+                      x="0"
+                      y="0"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text6">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image6)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="144px"
+                    font-family="sans-serif"
+                  >
+                    톤데모 원더즈
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text6" />
+                  <use class="image-bg" xlink:href="#fade-text6" />
+                </g>
+              </svg>
+            </div>
+          </div>
         </div>
         <p>6th: 톤데모 원더즈</p>
         <span>2024. 10. 18.</span>
       </div>
-      <!-- Add more covers as needed -->
     </section>
-    <script src="script.js"></script>
+    <script>
+      function openPopup(videoUrl) {
+        const width = 560;
+        const height = 315;
+        const left = (window.innerWidth - width) / 2;
+        const top = (window.innerHeight - height) / 2;
+        window.open(
+          videoUrl,
+          "popup",
+          `width=${width},height=${height},top=${top},left=${left},scrollbars=no,resizable=no`
+        );
+      }
+    </script>
   </body>
 </html>
