구분선 추가

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     용사
                   </text>
@@ -102,6 +104,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     괴수의 꽃노래
                   </text>
@@ -155,6 +159,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     지구를 줄게
                   </text>
@@ -208,6 +214,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     맑은 날
                   </text>
@@ -261,6 +269,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     GETCHA
                   </text>
@@ -314,6 +324,8 @@
                     dy=".35em"
                     font-size="96px"
                     font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
                   >
                     톤데모 원더즈
                   </text>
