케세라세라

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
                   >
                     <image
                       href="cover/cover6.jpg"
-                      x="0"
-                      y="0"
+                      x="-20"
+                      y="-20"
                       width="700"
                       height="300"
                     />
@@ -340,6 +340,61 @@
         </div>
         <p>6th: 톤데모 원더즈</p>
         <span>2024. 10. 18.</span>
+      </div>
+
+      <div
+        class="cover"
+        onclick="openPopup('https://www.youtube.com/watch?v=J49wnPBsyrU')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover7.jpg" alt="케세라세라" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image7"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover7.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text7">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image7)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="96px"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    케세라세라
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text7" />
+                  <use class="image-bg" xlink:href="#fade-text7" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>7th: 케세라세라</p>
+        <span>2024. 11. 01.</span>
       </div>
     </section>
     <script>
