8번째 커버곡 등록

--- a/index.html
+++ b/index.html
@@ -396,6 +396,61 @@
         <p>7th: 케세라세라</p>
         <span>2024. 11. 01.</span>
       </div>
+
+      <div
+        class="cover"
+        onclick="openPopup('https://www.youtube.com/watch?v=c6G7vRuJyhs')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover8.jpg" alt="경화수월" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image8"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover8.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text8">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image8)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="96px"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    경화수월
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text8" />
+                  <use class="image-bg" xlink:href="#fade-text8" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>8th: 경화수월</p>
+        <span>2024. 11. 21.</span>
+      </div>
     </section>
     <script>
       function openPopup(videoUrl) {
