11번째 커버곡 등록

--- a/index.html
+++ b/index.html
@@ -561,6 +561,61 @@
         <p>10th: 크리스마스송</p>
         <span>2024. 12. 25.</span>
       </div>
+
+      <div
+        class="cover"
+        onclick="openVideo('https://www.youtube.com/embed/EtkolJZEmpg')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover11.jpg" alt="꽃의탑" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image11"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover11.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text11">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image11)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="96px"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    꽃의탑
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text11" />
+                  <use class="image-bg" xlink:href="#fade-text11" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>11th: 꽃의탑</p>
+        <span>2025. 01. 10.</span>
+      </div>
     </section>
 
     <div id="videoModal" class="video-modal" style="display: none">
