커버곡 추가

--- a/index.html
+++ b/index.html
@@ -616,6 +616,61 @@
         <p>11th: 꽃의탑</p>
         <span>2025. 01. 10.</span>
       </div>
+
+      <div
+        class="cover"
+        onclick="openVideo('https://www.youtube.com/embed/PBh8a0GaNFs')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover12.jpg" alt="절대적대완전싫어" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image12"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover12.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text12">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image12)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="96px"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    절대적대완전싫어
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text12" />
+                  <use class="image-bg" xlink:href="#fade-text12" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>12th: 절대적대완전싫어</p>
+        <span>2025. 01. 28.</span>
+      </div>
     </section>
 
     <div id="videoModal" class="video-modal" style="display: none">
