font-size="min(5vw, 96px)"

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                     fill="url(#bg-image12)"
                     text-anchor="middle"
                     dy=".35em"
-                    font-size="96px"
+                    font-size="min(5vw, 96px)"
                     font-family="sans-serif"
                     stroke="#cecece"
                     stroke-width="2px"
