--- a/index.html
+++ b/index.html
@@ -671,6 +671,62 @@
         <p>12th: 절대적대완전싫어</p>
         <span>2025. 01. 28.</span>
       </div>
+
+      <div
+      class="cover"
+      onclick="openVideo('https://www.youtube.com/embed/HVBL6xHcMRY')"
+    >
+      <div class="cover-content">
+        <div class="cover-image">
+          <img src="cover/cover13.jpg" alt="마음예보" />
+        </div>
+        <div class="cover-text">
+          <div class="drawsvg">
+            <svg viewBox="0 0 700 300">
+              <defs>
+                <pattern
+                  id="bg-image13"
+                  patternUnits="userSpaceOnUse"
+                  width="100%"
+                  height="100%"
+                >
+                  <image
+                    href="cover/cover13.jpg"
+                    x="-20"
+                    y="-20"
+                    width="700"
+                    height="300"
+                  />
+                </pattern>
+              </defs>
+              <symbol id="fade-text13">
+                <text
+                  class="image-bg"
+                  x="50%"
+                  y="50%"
+                  fill="url(#bg-image13)"
+                  text-anchor="middle"
+                  dy=".35em"
+                  font-size="min(5vw, 96px)"
+                  font-family="sans-serif"
+                  stroke="#cecece"
+                  stroke-width="2px"
+                >
+                  마음예보
+                </text>
+              </symbol>
+              <g>
+                <use class="stroke" xlink:href="#fade-text13" />
+                <use class="image-bg" xlink:href="#fade-text13" />
+              </g>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <p>13th: 마음예보</p>
+      <span>2025. 02. 14.</span>
+    </div>
+
     </section>
 
     <div id="videoModal" class="video-modal" style="display: none">
