신규 커버곡 등록

--- a/index.html
+++ b/index.html
@@ -674,6 +674,61 @@
 
       <div
         class="cover"
+        onclick="openVideo('https://www.youtube.com/embed/TqQFF_wLlR4')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover_sub_1.jpg" alt="모니터링" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image-sub1"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover_sub_1.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text-sub1">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image-sub1)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="min(5vw, 96px)"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    모니터링 (モニタリング - DECO*27)
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text-sub1" />
+                  <use class="image-bg" xlink:href="#fade-text-sub1" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>sub 1st: 모니터링</p>
+        <span>2025. 02. 06.</span>
+      </div>
+
+      <div
+        class="cover"
         onclick="openVideo('https://www.youtube.com/embed/HVBL6xHcMRY')"
       >
         <div class="cover-content">
@@ -725,6 +780,62 @@
         </div>
         <p>13th: 마음예보</p>
         <span>2025. 02. 14.</span>
+      </div>
+
+      <div
+        class="cover"
+        onclick="openVideo('https://www.youtube.com/embed/JTMAVnFAff0')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover14.jpg" alt="Beyond the way" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image14"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover14.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text14">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image14)"
+                    text-anchor="middle"
+                    dy=".35em"
+                    font-size="min(5vw, 96px)"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    Beyond the way / [하나코 나나 x 유즈하 리코 x 아오쿠모 린]
+                    COVER
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text14" />
+                  <use class="image-bg" xlink:href="#fade-text14" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>14th: Beyond the way</p>
+        <span>2025. 02. 20.</span>
       </div>
     </section>
 
