디테일 수정

--- a/index.html
+++ b/index.html
@@ -712,7 +712,9 @@
                     stroke="#cecece"
                     stroke-width="2px"
                   >
-                    모니터링 (モニタリング - DECO*27)
+                    <tspan x="50%" dy="0.3em">모니터링</tspan>
+                    <tspan x="50%" dy="1.0em">(モニタリング</tspan>
+                    <tspan x="50%" dy="1.0em">- DECO*27)</tspan>
                   </text>
                 </symbol>
                 <g>
@@ -816,14 +818,15 @@
                     y="50%"
                     fill="url(#bg-image14)"
                     text-anchor="middle"
-                    dy=".35em"
                     font-size="min(5vw, 96px)"
                     font-family="sans-serif"
                     stroke="#cecece"
                     stroke-width="2px"
                   >
-                    Beyond the way / [하나코 나나 x 유즈하 리코 x 아오쿠모 린]
-                    COVER
+                    <tspan x="50%" dy="0.5em">Beyond the way</tspan>
+                    <tspan x="50%" dy="1.0em">[하나코 나나</tspan>
+                    <tspan x="50%" dy="1.0em">x 유즈하 리코 x</tspan>
+                    <tspan x="50%" dy="1.0em">아오쿠모 린] COVER</tspan>
                   </text>
                 </symbol>
                 <g>
