15번쨰 커버곡 등록

--- a/index.html
+++ b/index.html
@@ -840,6 +840,62 @@
         <p>14th: Beyond the way</p>
         <span>2025. 02. 20.</span>
       </div>
+
+      <div
+        class="cover"
+        onclick="openVideo('https://www.youtube.com/embed/y84L-0bz4zo')"
+      >
+        <div class="cover-content">
+          <div class="cover-image">
+            <img src="cover/cover15.jpg" alt="ラビットホール" />
+          </div>
+          <div class="cover-text">
+            <div class="drawsvg">
+              <svg viewBox="0 0 700 300">
+                <defs>
+                  <pattern
+                    id="bg-image15"
+                    patternUnits="userSpaceOnUse"
+                    width="100%"
+                    height="100%"
+                  >
+                    <image
+                      href="cover/cover15.jpg"
+                      x="-20"
+                      y="-20"
+                      width="700"
+                      height="300"
+                    />
+                  </pattern>
+                </defs>
+                <symbol id="fade-text15">
+                  <text
+                    class="image-bg"
+                    x="50%"
+                    y="50%"
+                    fill="url(#bg-image15)"
+                    text-anchor="middle"
+                    font-size="min(5vw, 96px)"
+                    font-family="sans-serif"
+                    stroke="#cecece"
+                    stroke-width="2px"
+                  >
+                    <tspan x="50%" dy="0.5em">ラビットホール</tspan>
+                    <tspan x="50%" dy="1.0em">(래빗 홀) /</tspan>
+                    <tspan x="50%" dy="1.0em">유즈하 리코</tspan>
+                  </text>
+                </symbol>
+                <g>
+                  <use class="stroke" xlink:href="#fade-text15" />
+                  <use class="image-bg" xlink:href="#fade-text15" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <p>15th: ラビットホール(래빗 홀)</p>
+        <span>2025. 03. 12.</span>
+      </div>
     </section>
 
     <div id="videoModal" class="video-modal" style="display: none">
